--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.2.1",
     "@types/react": "^17.0.39",
     "axios": "^0.26.0",
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-dropdown-picker": "^5.3.0",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
