--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-modal-datetime-picker": "^13.0.1",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
