--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@types/react": "^17.0.39",
     "axios": "^0.26.0",
     "react": "17.0.2",
